# armCADillo

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
data/: 3beziers.json  3stranger.json  TorusC2Cut.json  b-patch.json  bezier.json  bezier3small.json  bezierC2Cut.json  borysSample.json  cut.json  cut_walec.json  cuw_walec.json  cyllinder.json  example_scene2.json  gregory_test.json  kot.json  kot2.json  narrow.json  point.json  przeciecia_2025.json  random.json  sample.json  surfacC2.json  surface.json  surfacesC2  torusCut.json  torusDiff.json  torusDiff2.json  toruses.json  triangleGap.json  walec.josn  walec.json  walec_new.json
data/model/: kot_20.json  kot_41.json  kot_42.json  kot_44.json  kot_47.json  kot_49.json  kot_51.json  proper_cat.json  strange_cat_10.json
data/paths/: 1.k16  2.f10  3.k08  glowa.k08  noga_1.k08  ogon.k08  tulow.k08  ucho_1.k08  ucho_2.k08
resources/shaders/: centerPointShader.vs  colorFragmentShader.hlsl  fragGregory.glsl  fragmentShader.hlsl  fragmentShaderTrimmed.hlsl  geometryBezier.gs  gregoryTesselationControl.glsl  gregoryTesselationEval.glsl  pickingShader.frag  selectionBoxFS.glsl  selectionBoxVS.glsl  surfaceC2TesselationControll.glsl  surfaceC2TesselationEvaluation.glsl  surfaceIsolineTeselationEvaluation.glsl  surfaceTesselationControl.glsl  surfaceTesselationEvaluation.glsl  torusShader.vert  torusShader.vs  vertexBezier.vs  vertexGregory.glsl  vertexMesh.hlsl  vertexPickingShader.hlsl  vertexShader.hlsl  vertexSurface.glsl
shaders/: fragmentShader.hlsl  gridFragmentShader.hlsl  gridVertexShader.hlsl  textureShader.vert  texturedBillboardShader.frag  vertexShader.hlsl
src/: camera.hpp  main.cpp  mesh.hpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  torusSettings.hpp
src/app/: app.cpp  app.hpp  appConfig.hpp
src/backend/include/: fragmentShader.hlsl  mesh.hpp  triangle.hpp
src/controllers/: IController.hpp  cameraController.hpp  controllers.hpp  cursorController.hpp  modelController.hpp  mouse.hpp  selectionController.cpp  selectionController.hpp
src/entities/: IEntity.cpp  IEntity.hpp  IGroupedEntity.hpp  bSplineCurve.cpp  bSplineCurve.hpp  bezierCurve.hpp  bezierCurveC0.hpp  bezierCurveC2.hpp  bezierSurface.cpp  bezierSurface.hpp  bezierSurfaceC0.cpp  bezierSurfaceC0.hpp  bezierSurfaceC2.cpp  bezierSurfaceC2.hpp  cursor.hpp  entitiesTypes.hpp  gregorySurface.cpp  gregorySurface.hpp  grid.hpp  interpolatingSplineC2.cpp  interpolatingSplineC2.hpp  intersectable.cpp  intersectable.hpp  intersectionCurve.cpp  intersectionCurve.hpp  point.hpp  pointEntity.hpp  pointModel.hpp  polyline.cpp  polyline.hpp  torusEntity.hpp  torusModel.hpp  utils.hpp  virtualPoint.cpp  virtualPoint.hpp  virtualPoints.hpp
src/entities/EntityFactories/: EntityFactory.hpp  IEntityFactory.hpp  pointFactory.hpp  torusFactory.hpp
src/entities/entityFactory/: entityFactory.cpp  entityFactory.hpp
src/frontend/include/: camera.hpp  cameraController.hpp  (+9 more)
src/gui/: centerPoint.hpp  gui.cpp  gui.hpp  intersectionConfig.hpp  pathCombinerGui.cpp  pathCombinerGui.hpp  point.hpp
src/intersections/: IDifferentialParametricForm.hpp  intersectionFinder.cpp  intersectionFinder.hpp
src/meshes/: IMeshable.hpp  bezierCurveMesh.cpp  bezierCurveMesh.hpp  bezierSurfaceMesh.cpp  bezierSurfaceMesh.hpp  gregoryMesh.cpp  gregoryMesh.hpp  mesh.cpp  mesh.hpp
src/notifications/: ISubscribable.hpp  ISubscriber.hpp  ISubsriber.cpp
src/paths/: GCodeSerializer.cpp  GCodeSerializer.hpp  block.hpp  cutter.hpp  detailedPathGenerator.cpp  detailedPathGenerator.hpp  flatPathGenerator.cpp  flatPathGenerator.hpp  heightMap.cpp  heightMap.hpp  heightMapGenerator.cpp  heightMapGenerator.hpp  millingPath.hpp  model.hpp  namedPath.cpp  namedPath.hpp  pathCombiner.cpp  pathCombiner.hpp  pathReader.cpp  pathReader.hpp  pathsGenerator.cpp  pathsGenerator.hpp  roughingPathGenerator.cpp  roughingPathGenerator.hpp  segment.hpp
src/renderables/: IRenderable.hpp  polygonalCurve.hpp
src/rendering/: IRenderable.hpp  grid.hpp  millingPathRenderer.cpp  millingPathRenderer.hpp  pickingRenderer.hpp  pickingTexture.hpp  renderer.cpp  renderer.hpp  sceneRenderer.hpp  selectionBoxRenderer.hpp
src/textures/: canvas.hpp  color.hpp  image.cpp  image.hpp  intersectionTexture.cpp  intersectionTexture.hpp  texture.hpp  textureResource.hpp
src/utils/: borderGraph.cpp  borderGraph.hpp  glfwHelper.hpp  gregoryQuad.hpp
(+53 files in other folders)
